sedona: undo Integer.valueOf optimization
We need to support building sedona code for pre-1.5 JVM, so we cannot
use this static method.